Background fix: stretched to footer

--- a/app/assets/stylesheets/primary.css.scss
+++ b/app/assets/stylesheets/primary.css.scss
@@ -303,6 +303,9 @@ span { //tja?
 .mainchronology {
     background-color: $black;
 }
+.bodychronology {
+  background-color: $black;
+}
 
 /* CSS SKETCH MAPS */
 .sketchmaps {
